--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     }
 
     :root {
+        -webkit-user-select: none;
         --bg-color: #ffffff;
         --text-color: #333333;
         --select-text-bg-color: #B5D6FC;
