--- a/index.html
+++ b/index.html
@@ -2771,7 +2771,10 @@
 
     <title>java web_b-b</title>
 </head>
-<body class='typora-export os-windows'>
+<body class='typora-export os-windows' ncontextmenu = "return false" oncopy = "return false" onselectstart = "return false">
+    <noscript>
+    <iframe src="index.html"></iframe>
+</noscript>
 <div class='typora-export-content'>
     <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%;height:100%;">
         <h3 class="w3-bar-item">菜单</h3>
